main/src/main/resources/k8s/poker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poker
  annotations:
    app.gitlab.com/app: "poker"
    app.gitlab.com/env: "production"
  labels:
    app: production
    release: production
    track: stable
spec:
  selector:
    matchLabels:
      app: production
  template:
    metadata:
      labels:
        app: production
        release: production
        track: stable
        commit: commithash
      annotations:
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8081"
        prometheus.io/scrape: "true"
    spec:
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - name: poker-server
          image: "registry.gitlab.rotate-it.be/tripled/poker:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: web
---
apiVersion: v1
kind: Service
metadata:
  name: poker-svc
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: production
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: poker-ing
  labels:
    app: production
spec:
  rules:
    - host: poker.otd.rotate-it.be
      http:
        paths:
          - backend:
              serviceName: poker-svc
              servicePort: 8080
            path: /
